tests/invalid/no_from.stderr
error[E0277]: the trait bound `(): From<&String>` is not satisfied
 --> $DIR/no_from.rs:3:1
  |
3 | unsync_once_self_cell!(NoFromCell, String, (),);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&String>` is not implemented for `()`
  |
  = note: required because of the requirements on the impl of `Into<()>` for `&String`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
